# iterm

./: INSTALL  INSTALL.jp  INSTALL.zh_CN  README  README.jp  README.zh_CN  RELNOTES  RELNOTES.zh_CN
lib/: Makefile.in  aclocal.m4  config.h.in  configure  configure.in
lib/include/: Makefile.in
lib/include/iterm/: Makefile.in
lib/include/iterm/unix/: Makefile.in
lib/src/: Makefile.in
lib/src/unix/: Makefile.in
lib/src/unix/fribidi_layout/: Makefile.in
lib/src/unix/pls_layout/: Makefile.in
lib/src/unix/tty/: Makefile.in  ttyio.c
unix/Xaw/: README  README.jp
unix/Xaw/lib/: ChangeLog  Iterm.c  Iterm.h  Makefile.am  Makefile.in  VT.c  VT.h  VTP.h  VTScreenView.c  actions.c  mkinstalldirs  xim.c
unix/Xaw/src/: ChangeLog  Makefile.am  Makefile.in  XIterm  mkinstalldirs  xiterm.c
unix/fbiterm/: ChangeLog  Makefile.in  README  README.jp  mkinstalldirs
unix/fbiterm/src/: Makefile.am  Makefile.in  VTScreenView.c  fb.c  fb_true24.c  fbiterm.c  fbiterm.h  input.c  term.c
unix/gtk/: README
unix/gtk/lib/: Makefile  gtkiterm.c  gtkiterm.h
unix/gtk/src/: Makefile  gtkiterm.c
unix/terminfo/: iterm.terminfo
